--- a/AncientEgypt.html
+++ b/AncientEgypt.html
@@ -55,7 +55,7 @@
             <div class="box">
                 <div class="col-lg-12">
                     <hr>
-                    <h2 class="intro-text text-center">Section Title</h2>
+                    <h2 class="intro-text text-center">Ancient Egypt</h2>
                     <hr>
                 </div>
                 <div class="col-lg-12 text-center"></div>
@@ -71,16 +71,40 @@
                     </div>
                     <div class="col-md-9">
                         <div class="thumbnail">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent imperdiet convallis neque. Sed in ligula non leo facilisis egestas ac eu ipsum. Sed laoreet convallis nibh ac sollicitudin. Aliquam porta sapien vel leo aliquam sollicitudin. Curabitur viverra semper lacus eget lobortis. Cras elit mi, placerat quis iaculis in, rhoncus ultrices neque. Praesent facilisis euismod porttitor. Aliquam venenatis, ipsum id molestie suscipit, nisi orci varius risus, eu porttitor felis metus at odio. Proin id facilisis eros. Aenean nec hendrerit arcu, quis posuere dui. Proin feugiat velit ut luctus imperdiet. Phasellus convallis maximus nunc at suscipit. Suspendisse potenti. Proin orci lectus, imperdiet eu hendrerit id, mattis non dui. Suspendisse non varius nibh.</p>
-
-                            <p>Donec quis mauris justo. Nunc maximus nisl nunc, a varius velit pretium at. Nunc auctor varius elit in blandit. Mauris semper odio euismod lorem scelerisque, et tempus nisi faucibus. In ullamcorper blandit justo ut ullamcorper. Nulla ac ex ac felis gravida placerat. Duis consectetur, risus ut consequat semper, libero erat tempor tellus, auctor pulvinar diam turpis at augue. Etiam mollis nulla a magna aliquam tempor. Quisque neque erat, fermentum eget purus id, luctus ullamcorper ligula. Nulla id metus eget dolor eleifend lobortis eu sed ligula. Curabitur ultricies mauris tortor, bibendum condimentum mauris lacinia in. Nulla a tortor eu purus efficitur fringilla. Suspendisse potenti. Phasellus a porta odio, et mattis orci.</p>
+                            <h1>Ancient Egyptian Society</h1>
+                            <p>During this time period the Egyptian society was an agricultural society that was based along the River Nile. Due to this society being based along the River Nile, the Nile floods benefited the society as it fertilised the fields. This in turn benefited the society as it meant there was spare food so more people were healthy. Which then meant that more people could become doctors and other professionals. The ancient Egyptians were the first to really document their knowledge of medicine which was then used as a guide for future time periods.
+                            </p>
                         </div>
                     </div>
                     <div class="col-md-12">
                         <div class="thumbnail">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent imperdiet convallis neque. Sed in ligula non leo facilisis egestas ac eu ipsum. Sed laoreet convallis nibh ac sollicitudin. Aliquam porta sapien vel leo aliquam sollicitudin. Curabitur viverra semper lacus eget lobortis. Cras elit mi, placerat quis iaculis in, rhoncus ultrices neque. Praesent facilisis euismod porttitor. Aliquam venenatis, ipsum id molestie suscipit, nisi orci varius risus, eu porttitor felis metus at odio. Proin id facilisis eros. Aenean nec hendrerit arcu, quis posuere dui. Proin feugiat velit ut luctus imperdiet. Phasellus convallis maximus nunc at suscipit. Suspendisse potenti. Proin orci lectus, imperdiet eu hendrerit id, mattis non dui. Suspendisse non varius nibh.</p>
-
-                            <p>Donec quis mauris justo. Nunc maximus nisl nunc, a varius velit pretium at. Nunc auctor varius elit in blandit. Mauris semper odio euismod lorem scelerisque, et tempus nisi faucibus. In ullamcorper blandit justo ut ullamcorper. Nulla ac ex ac felis gravida placerat. Duis consectetur, risus ut consequat semper, libero erat tempor tellus, auctor pulvinar diam turpis at augue. Etiam mollis nulla a magna aliquam tempor. Quisque neque erat, fermentum eget purus id, luctus ullamcorper ligula. Nulla id metus eget dolor eleifend lobortis eu sed ligula. Curabitur ultricies mauris tortor, bibendum condimentum mauris lacinia in. Nulla a tortor eu purus efficitur fringilla. Suspendisse potenti. Phasellus a porta odio, et mattis orci.</p>
+                            <h1>Natural Beliefs and Treatmnets</h1>
+                            <p>Due to the way the Ancient Egyptians benefited from the River Nile they began to believe that the human body was full of channels. They believed that when you became ill it was due to one of the channels being blocked. They used methods such as purging, vomiting and blood-letting to unblock these channels. Although a lot of the Egyptian society believed in this method most of these ideas weren’t accepted by all.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-md-12">
+                        <div class="thumbnail">
+                            <h1>Supernatural Beliefs and Treatmnets</h1>
+                            <p>During this time the egyptian gods played a very crucial role within their society as they believed that their gods could cause disease but also be the cure. Priests were amongst the majority of the Ancient Egyptian society and these priests kept books which detailed accepted treatments and spells. These books also contained instructions on what to do when talking to a patient with exact instructions on what to do, say and what medicine to give the patient.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <a href="https://placeholder.com"><img src="https:via.placeholder.com/275"></a>
+                    </div>
+                    <div class="col-md-9">
+                        <div class="thumbnail">
+                            <h1>Mummification</h1>
+                            <p>Ancient Egyptian believed that when a person dies their body was needed in the afterlife so they began the practice of mummification. This was the process of preserving human bodies. To begin with they would remove all of the soft organs form the body and dried the remainder of the body with salt. With this process it gave the Ancient Egyptians some knowledge towards the anatomy of the human body. Due to the Egyptians believing the body was needed in the afterlife any experiments that would have been performed to potentially learn more were not allowed. This was because they believed that this is destroying a person’s body which meant they would not be able to go to the afterlife.
+                            </p>
+                        </div>
+                    </div> 
+                    <div class="col-md-12">
+                        <div class="thumbnail">
+                            <h1>Ancient Egyptian Hygiene</h1>
+                            <p>Despite the time period of the Ancient Egyptians they were very hygienic. They bathed, shaved their heads and had access to toilets. They also regularly changed their clothes.
+                            </p>
                         </div>
                     </div> 
                     <div class="col-md-4">
