--- a/AncientGreece.html
+++ b/AncientGreece.html
@@ -61,7 +61,6 @@
                 <div class="col-lg-12 text-center"></div>
             </div>
     <!--Header End->
-    
     <!--Main Body-->
             <div class="container">
                 <div class="row">
@@ -71,18 +70,41 @@
                     </div>
                     <div class="col-md-9">
                         <div class="thumbnail">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent imperdiet convallis neque. Sed in ligula non leo facilisis egestas ac eu ipsum. Sed laoreet convallis nibh ac sollicitudin. Aliquam porta sapien vel leo aliquam sollicitudin. Curabitur viverra semper lacus eget lobortis. Cras elit mi, placerat quis iaculis in, rhoncus ultrices neque. Praesent facilisis euismod porttitor. Aliquam venenatis, ipsum id molestie suscipit, nisi orci varius risus, eu porttitor felis metus at odio. Proin id facilisis eros. Aenean nec hendrerit arcu, quis posuere dui. Proin feugiat velit ut luctus imperdiet. Phasellus convallis maximus nunc at suscipit. Suspendisse potenti. Proin orci lectus, imperdiet eu hendrerit id, mattis non dui. Suspendisse non varius nibh.</p>
-
-                            <p>Donec quis mauris justo. Nunc maximus nisl nunc, a varius velit pretium at. Nunc auctor varius elit in blandit. Mauris semper odio euismod lorem scelerisque, et tempus nisi faucibus. In ullamcorper blandit justo ut ullamcorper. Nulla ac ex ac felis gravida placerat. Duis consectetur, risus ut consequat semper, libero erat tempor tellus, auctor pulvinar diam turpis at augue. Etiam mollis nulla a magna aliquam tempor. Quisque neque erat, fermentum eget purus id, luctus ullamcorper ligula. Nulla id metus eget dolor eleifend lobortis eu sed ligula. Curabitur ultricies mauris tortor, bibendum condimentum mauris lacinia in. Nulla a tortor eu purus efficitur fringilla. Suspendisse potenti. Phasellus a porta odio, et mattis orci.</p>
+                            <h1>Theory of Four Humours</h1>
+                            <p>The Theory of the Four Humours was thought of by a man named Aristotle. Aristotle suggested that the body was made up of four humours and these were blood, phlegm, yellow bile and black bile. This four humours were also linked to the four seasons and four elements. This theory is the belief that these needed to be in balance in order to have good health. With this theory treatments were developed in order get rid of excess humour by purging, vomiting or blood-letting.</p>
+                        </div>
+                    </div>    
+                    <div class="col-md-12">
+                        <div class="thumbnail">
+                            <h1>Hippocrates</h1>
+                            <p>Hippocrates is often referred to as the father of modern medicine. This is because he belived in natural causes of diseases and encouraged other doctors to treat illness using natural methods. Hippocrates also came up with the method of Clinical observation. This is simply where the doctor would observe all of the patients symptoms and then commence treatment once they have an understanding of the problem. The hippocratic oath is an oath that was founded based off of the beliefs of Hippocrates. The oath is still used today by doctors and the oath is a promise made by doctors stating that they will obey the rules of behaviour in their professional lives.</p>
+                        </div>
+                    </div> 
+                    <div class="col-md-12">
+                        <div class="thumbnail">
+                            <h1>Healthy Living</h1>
+                            <p>The Ancient Greeks believe that in order to be healthy they needed to exercise. They also believed hygiene was very important with a lot of emphasis placed on washing. The Ancient Greeks also followed a diet that changed depending on the season. For example in the Winter they would eat more but drink less and in the Summer they would eat less and drink more.</p>
+                        </div>
+                    </div> 
+                    <div class="col-md-12">
+                        <div class="thumbnail">
+                            <h1>Supernatural Beliefs</h1>
+                            <p>The Ancient Greeks was another period in time where they believe in Gods and thought that they had a part in illness. These is known because Temples called Asclepions and people would go and stay there when they would become ill. The visitors who visited the temples would bathe, relax and pray to Asclepius the Greek God of Healing. Whilst they slept at the temple they believed a God would come to them in a dream and cure them. Whilst patients were visiting the temple the priests would perform rituals which often involved placing snakes onto the patients.</p>
                         </div>
                     </div>
                     <div class="col-md-12">
                         <div class="thumbnail">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent imperdiet convallis neque. Sed in ligula non leo facilisis egestas ac eu ipsum. Sed laoreet convallis nibh ac sollicitudin. Aliquam porta sapien vel leo aliquam sollicitudin. Curabitur viverra semper lacus eget lobortis. Cras elit mi, placerat quis iaculis in, rhoncus ultrices neque. Praesent facilisis euismod porttitor. Aliquam venenatis, ipsum id molestie suscipit, nisi orci varius risus, eu porttitor felis metus at odio. Proin id facilisis eros. Aenean nec hendrerit arcu, quis posuere dui. Proin feugiat velit ut luctus imperdiet. Phasellus convallis maximus nunc at suscipit. Suspendisse potenti. Proin orci lectus, imperdiet eu hendrerit id, mattis non dui. Suspendisse non varius nibh.</p>
-
-                            <p>Donec quis mauris justo. Nunc maximus nisl nunc, a varius velit pretium at. Nunc auctor varius elit in blandit. Mauris semper odio euismod lorem scelerisque, et tempus nisi faucibus. In ullamcorper blandit justo ut ullamcorper. Nulla ac ex ac felis gravida placerat. Duis consectetur, risus ut consequat semper, libero erat tempor tellus, auctor pulvinar diam turpis at augue. Etiam mollis nulla a magna aliquam tempor. Quisque neque erat, fermentum eget purus id, luctus ullamcorper ligula. Nulla id metus eget dolor eleifend lobortis eu sed ligula. Curabitur ultricies mauris tortor, bibendum condimentum mauris lacinia in. Nulla a tortor eu purus efficitur fringilla. Suspendisse potenti. Phasellus a porta odio, et mattis orci.</p>
+                            <h1>Alexandria and Dissection</h1>
+                            <p>The library of Alexandria was a library that attempted to collect all the knowledge of the world. The library of Alexandria was one place within Ancient Greece that human dissection was allowed. Alexandria was famous for the training of medics and surgeons. Once they were done being done trained at Alexandria they went on to practice all over the world.</p>
+                            <p>Erasistratus was a Greek anatomist and royal physician who founded the school of anatomy in Alexandria. One discovery that was made by Erasistratus at the library was that difference between arteries, veins and nerves. His discovery found that nerves were not hollow so could not be vessels for fluid.</p>
                         </div>
-                    </div> 
+                    </div>
+                    <div class="col-md-12">
+                        <div class="thumbnail">
+                            <h1>Surgery</h1>
+                            <p>Surgery advanced only slightly during this time period but this was because it was still a risky procedure. Although most treatments were performed outside of the body so surgery was not always required it was used as a last resort if those treatments proved ineffective. Surgeons at this time developed good techniques for setting broken bones and in extreme cases of this would amputate. During this time a range of surgical instruments were also developed and this were made of iron, steel and brass.</p>
+                        </div>
+                    </div>
                     <div class="col-md-4">
                             <a href="https://placeholder.com"><img src="https:via.placeholder.com/350"></a>
                     </div>
