--- a/AncientRome.html
+++ b/AncientRome.html
@@ -61,7 +61,6 @@
                 <div class="col-lg-12 text-center"></div>
             </div>
     <!--Header End->
-    
     <!--Main Body-->
             <div class="container">
                 <div class="row">
@@ -71,16 +70,26 @@
                     </div>
                     <div class="col-md-9">
                         <div class="thumbnail">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent imperdiet convallis neque. Sed in ligula non leo facilisis egestas ac eu ipsum. Sed laoreet convallis nibh ac sollicitudin. Aliquam porta sapien vel leo aliquam sollicitudin. Curabitur viverra semper lacus eget lobortis. Cras elit mi, placerat quis iaculis in, rhoncus ultrices neque. Praesent facilisis euismod porttitor. Aliquam venenatis, ipsum id molestie suscipit, nisi orci varius risus, eu porttitor felis metus at odio. Proin id facilisis eros. Aenean nec hendrerit arcu, quis posuere dui. Proin feugiat velit ut luctus imperdiet. Phasellus convallis maximus nunc at suscipit. Suspendisse potenti. Proin orci lectus, imperdiet eu hendrerit id, mattis non dui. Suspendisse non varius nibh.</p>
-
-                            <p>Donec quis mauris justo. Nunc maximus nisl nunc, a varius velit pretium at. Nunc auctor varius elit in blandit. Mauris semper odio euismod lorem scelerisque, et tempus nisi faucibus. In ullamcorper blandit justo ut ullamcorper. Nulla ac ex ac felis gravida placerat. Duis consectetur, risus ut consequat semper, libero erat tempor tellus, auctor pulvinar diam turpis at augue. Etiam mollis nulla a magna aliquam tempor. Quisque neque erat, fermentum eget purus id, luctus ullamcorper ligula. Nulla id metus eget dolor eleifend lobortis eu sed ligula. Curabitur ultricies mauris tortor, bibendum condimentum mauris lacinia in. Nulla a tortor eu purus efficitur fringilla. Suspendisse potenti. Phasellus a porta odio, et mattis orci.</p>
+                            <h1>Public Health</h1>
+                            <p>During this time Romans began to notice that bad smells, unclean drinking water, sewage and dirt made people become ill and in order to combat this they built aqueducts to carry clean water into their cities, public baths, toilets and sewers were all built in order to give Ancient Romans a way to clean themselves and the toilets were connected to sewers so all waste was removed from the city.</p>
                         </div>
                     </div>
                     <div class="col-md-12">
                         <div class="thumbnail">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent imperdiet convallis neque. Sed in ligula non leo facilisis egestas ac eu ipsum. Sed laoreet convallis nibh ac sollicitudin. Aliquam porta sapien vel leo aliquam sollicitudin. Curabitur viverra semper lacus eget lobortis. Cras elit mi, placerat quis iaculis in, rhoncus ultrices neque. Praesent facilisis euismod porttitor. Aliquam venenatis, ipsum id molestie suscipit, nisi orci varius risus, eu porttitor felis metus at odio. Proin id facilisis eros. Aenean nec hendrerit arcu, quis posuere dui. Proin feugiat velit ut luctus imperdiet. Phasellus convallis maximus nunc at suscipit. Suspendisse potenti. Proin orci lectus, imperdiet eu hendrerit id, mattis non dui. Suspendisse non varius nibh.</p>
-
-                            <p>Donec quis mauris justo. Nunc maximus nisl nunc, a varius velit pretium at. Nunc auctor varius elit in blandit. Mauris semper odio euismod lorem scelerisque, et tempus nisi faucibus. In ullamcorper blandit justo ut ullamcorper. Nulla ac ex ac felis gravida placerat. Duis consectetur, risus ut consequat semper, libero erat tempor tellus, auctor pulvinar diam turpis at augue. Etiam mollis nulla a magna aliquam tempor. Quisque neque erat, fermentum eget purus id, luctus ullamcorper ligula. Nulla id metus eget dolor eleifend lobortis eu sed ligula. Curabitur ultricies mauris tortor, bibendum condimentum mauris lacinia in. Nulla a tortor eu purus efficitur fringilla. Suspendisse potenti. Phasellus a porta odio, et mattis orci.</p>
+                            <h1>Claudius Galen</h1>
+                            <p>Claudius Galen was a Greek physician who believed that illness was caused by imbalances of the four humours. Galen developed the idea of opposite humours for counter-balancing the body’s humours. Galen was the person who discovered that the brain is what controls speech not the heart. He also found that arteries and veins carry blood through the body. Despite Galen's discoveries he also made a few mistakes and this was mostly because Galen could not study the human anatomy but had to substitute the human body for that of animal bodies.</p>
+                        </div>
+                    </div> 
+                    <div class="col-md-12">
+                        <div class="thumbnail">
+                            <h1>Beliefs and Treatments</h1>
+                            <p>Doctors during this time recommended more exercise, changes in diets or prescribed herbal medicines as opposites. Also during the this time doctors were quite expensive for most people so it was common for the head of the family to look after their household. Due to this they would use herbal remedies and common sense methods.</p>
+                        </div>
+                    </div> 
+                    <div class="col-md-12">
+                        <div class="thumbnail">
+                            <h1>Surgery</h1>
+                            <p>Surgery at this point in time mainly consisted of bleeding. Internal operations were still rare at this point in time because of the risk of surgery. The other surgery that was conducted rarely was amputation with that addition of trephining which was where they would drill a hole into a patient's head in order to relieve pressure.</p>
                         </div>
                     </div> 
                     <div class="col-md-4">
