--- a/MedievalMedicine.html
+++ b/MedievalMedicine.html
@@ -61,7 +61,6 @@
                 <div class="col-lg-12 text-center"></div>
             </div>
     <!--Header End->
-    
     <!--Main Body-->
             <div class="container">
                 <div class="row">
@@ -71,18 +70,52 @@
                     </div>
                     <div class="col-md-9">
                         <div class="thumbnail">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent imperdiet convallis neque. Sed in ligula non leo facilisis egestas ac eu ipsum. Sed laoreet convallis nibh ac sollicitudin. Aliquam porta sapien vel leo aliquam sollicitudin. Curabitur viverra semper lacus eget lobortis. Cras elit mi, placerat quis iaculis in, rhoncus ultrices neque. Praesent facilisis euismod porttitor. Aliquam venenatis, ipsum id molestie suscipit, nisi orci varius risus, eu porttitor felis metus at odio. Proin id facilisis eros. Aenean nec hendrerit arcu, quis posuere dui. Proin feugiat velit ut luctus imperdiet. Phasellus convallis maximus nunc at suscipit. Suspendisse potenti. Proin orci lectus, imperdiet eu hendrerit id, mattis non dui. Suspendisse non varius nibh.</p>
-
-                            <p>Donec quis mauris justo. Nunc maximus nisl nunc, a varius velit pretium at. Nunc auctor varius elit in blandit. Mauris semper odio euismod lorem scelerisque, et tempus nisi faucibus. In ullamcorper blandit justo ut ullamcorper. Nulla ac ex ac felis gravida placerat. Duis consectetur, risus ut consequat semper, libero erat tempor tellus, auctor pulvinar diam turpis at augue. Etiam mollis nulla a magna aliquam tempor. Quisque neque erat, fermentum eget purus id, luctus ullamcorper ligula. Nulla id metus eget dolor eleifend lobortis eu sed ligula. Curabitur ultricies mauris tortor, bibendum condimentum mauris lacinia in. Nulla a tortor eu purus efficitur fringilla. Suspendisse potenti. Phasellus a porta odio, et mattis orci.</p>
+                            <h1>Influence of the Christian Church</h1>
+                            <p>Christian churches grew stronger in the Middle Ages. Monasteries controlled education, priests and monks were the only people who were allowed to read. The church open medical schools where the idea of Galen were taught.  Libraries were only available in the monasteries and the church occasionally banned books they did not want people to read.</p>
                         </div>
                     </div>
                     <div class="col-md-12">
                         <div class="thumbnail">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent imperdiet convallis neque. Sed in ligula non leo facilisis egestas ac eu ipsum. Sed laoreet convallis nibh ac sollicitudin. Aliquam porta sapien vel leo aliquam sollicitudin. Curabitur viverra semper lacus eget lobortis. Cras elit mi, placerat quis iaculis in, rhoncus ultrices neque. Praesent facilisis euismod porttitor. Aliquam venenatis, ipsum id molestie suscipit, nisi orci varius risus, eu porttitor felis metus at odio. Proin id facilisis eros. Aenean nec hendrerit arcu, quis posuere dui. Proin feugiat velit ut luctus imperdiet. Phasellus convallis maximus nunc at suscipit. Suspendisse potenti. Proin orci lectus, imperdiet eu hendrerit id, mattis non dui. Suspendisse non varius nibh.</p>
-
-                            <p>Donec quis mauris justo. Nunc maximus nisl nunc, a varius velit pretium at. Nunc auctor varius elit in blandit. Mauris semper odio euismod lorem scelerisque, et tempus nisi faucibus. In ullamcorper blandit justo ut ullamcorper. Nulla ac ex ac felis gravida placerat. Duis consectetur, risus ut consequat semper, libero erat tempor tellus, auctor pulvinar diam turpis at augue. Etiam mollis nulla a magna aliquam tempor. Quisque neque erat, fermentum eget purus id, luctus ullamcorper ligula. Nulla id metus eget dolor eleifend lobortis eu sed ligula. Curabitur ultricies mauris tortor, bibendum condimentum mauris lacinia in. Nulla a tortor eu purus efficitur fringilla. Suspendisse potenti. Phasellus a porta odio, et mattis orci.</p>
+                            <h1>Medieval Hospitals</h1>
+                            <p>With mediaeval hospitals medical care was provided for the poor set up by the monasteries. The hospitals were run by monks and nuns, they provided hospitality for all visitors, although genuinely ill patients were often turned away due the fear of disease spreading.</p>
                         </div>
-                    </div> 
+                    </div>
+                    <div class="col-md-12">
+                        <div class="thumbnail">
+                            <h1>Return of Hippocrates and Galen</h1>
+                            <p>During this time Galen's ideas were rediscovered by the church leaders. They looked carefully at his work and decided that it was correct and that it fitted in with Christian ideas. This was mostly because he referred to “the creator” in his work. Galen had great influence on the Doctors in the Arabic world and in mediaeval Christian Europe.</p>
+                        </div>
+                    </div>
+                    <div class="col-md-12">
+                        <div class="thumbnail">
+                            <h1>Four Humours Theory</h1>
+                            <p>Mediaeval doctors believe the illness was caused by an imbalance of the four humours. This theory developed further into a more complex system based on the position of the stars. When human dissection was carried out within medical schools findings were interpreted as the theory of the four humours. Although later on doctors began to challenge this traditional understanding.</p>
+                        </div>
+                    </div>
+                    <div class="col-md-12">
+                        <div class="thumbnail">
+                            <h1>New Developments</h1>
+                            <p>During this time there were many new developments within medicine. More schools were built and human dissection was allowed. One of the new techniques was diagnosis by urine sample. Doctors also believed that stars caused disease and relied on astrology when deciding on treatments. Doctors were very expensive during this time so medicine that was practiced was then provided by the monasteries and housewife physicians using traditional cures and their experience.</p>
+                        </div>
+                    </div>
+                    <div class="col-md-12">
+                        <div class="thumbnail">
+                            <h1>Supernatural beliefs and Treatments</h1>
+                            <p>Due to the strong presence the church had during this period it was more widely believed that illness was punishment for sins and that they would need to pray to god if they became ill. Doctors also had superstitious beliefs and this is known because they would often say magical words when treating patients and often consulted the starts before deciding on treatment.</p>
+                        </div>
+                    </div>
+                    <div class="col-md-12">
+                        <div class="thumbnail">
+                            <h1>Surgery Development</h1>
+                            <p>During the Medieval ages there was a great demand for surgery due to warfare, but because surgery was held in such low regard many procedures were left to untrained barber-surgeons. This was also the time in which wine was first discovered to be an antiseptic.</p>
+                        </div>
+                    </div>
+                    <div class="col-md-12">
+                        <div class="thumbnail">
+                            <h1>Public Health</h1>
+                            <p>Public health seemed to take a step back during this period as they lost the public health schemes the Romans had introduced and the public would often rely on cesspits and wells. Human waste was often disposed of into the street.</p>
+                        </div>
+                    </div>
                     <div class="col-md-4">
                             <a href="https://placeholder.com"><img src="https:via.placeholder.com/350"></a>
                     </div>
